--- a/src/theme/variables/utilities.less
+++ b/src/theme/variables/utilities.less
@@ -33,7 +33,7 @@
     &.fluid {
         grid-template-columns: unset;
         grid-auto-flow: column;
-        grid-auto-columns: minmax(min-content, max-content);
+        grid-auto-columns: minmax(max-content, max-content);
     }
     
     &.auto {
